<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="version">1.6</string>
    <string name="app_name">CB资讯阅读</string>
    <string name="loading">加载中&#8230;</string>
    <string name="error">发生异常！</string>
    <string name="io_error">发生IO异常！</string>
    <string name="load_more">点击加载更多</string>
    <string name="check_start">检查SD卡和网络连接&#8230;</string>
    <string name="check_stop">检查SD卡和网络连接完毕</string>
    <string name="no_net_sd">未检测到SD卡和网络连接。</string>
    <string name="no_net">未检测到网络连接，是否退出？</string>
    <string name="no_sd">未检测到SD卡， LOGO，新闻和评论将不会被缓存。</string>
    <string name="no_wifi">当前非Wi-Fi网络， 请留意你的移动数据流量。</string>
    <string name="quit">退出</string>
    <string name="offline">我的阅读列表</string>
    <string name="cache_start">新闻正在下载&#8230;</string>
    <string name="cache_success">新闻已下载</string>
    <string name="cache_fail">下载新闻失败！</string>
    <string name="hour_ago"><xliff:g>%d</xliff:g>小时前</string>
    <string name="minute_ago"><xliff:g>%d</xliff:g>分钟前</string>
    <string name="second_ago">刚刚</string>
    <string name="day_ago"><xliff:g>%d</xliff:g>天前</string>
    <string name="url_empty">URL为空！</string>
    <string name="result_empty">服务器异常，未获取数据！</string>
    <string name="parser_error">数据解析异常！</string>
    <string name="save_error">写入数据库发生异常！</string>
    <string name="db_error">数据库未查询到结果！</string>
    <string name="load_more_empty">加载更多失败！</string>
    <string name="back_to_top">返回顶部</string>
    <string name="home">首页</string>
    <string name="top">十大人气文章</string>
    <string name="hm">优秀评论</string>
    <string name="name">[<xliff:g>%s</xliff:g>] 评论新闻：</string>
    <string name="anonymity">匿名人士</string>
    <string name="no_items">无内容</string>
    <string name="refresh">刷新</string>
    <string name="cmt"><xliff:g>%d</xliff:g>条评论</string>
    <string name="cmt_close">评论已关闭</string>
    <string name="news_detial">资讯详情</string>
    <string name="news_not_found">未找到新闻！</string>
    <string name="view_comment">查看评论(<xliff:g>%d</xliff:g>)</string>
    <string name="dig">顶一下</string>
    <string name="rating">打分</string>
    <string name="dig_result1">谢谢参与</string>
    <string name="dig_result2">您已顶过</string>
    <string name="dig_result3">未知异常</string>
    <string name="share_news">分享新闻</string>
    <string name="share_comments">分享评论</string>
    <string name="comments">评论</string>
    <string name="new_comment">我要评论</string>
    <string name="reply_comment">回复评论</string>
    <string name="floor"><xliff:g>%d</xliff:g>楼</string>
    <string name="comment_info">[<xliff:g>%s</xliff:g>] 发表于 <xliff:g>%s</xliff:g></string>
    <string name="reply">回复</string>
    <string name="report">举报</string>
    <string name="support">支持(<b><xliff:g>%d</xliff:g></b>)</string>
    <string name="against">反对(<b><xliff:g>%d</xliff:g></b>)</string>
    <string name="vote_success">谢谢您的参与</string>
    <string name="vote_fail">你已经投过票了</string>
    <string name="report_success">感谢您的举报</string>
    <string name="report_fail_1">请勿重复举报</string>
    <string name="report_fail_2">您今天已经举报了很多次，谢谢您的参与。</string>
    <string name="report_fail_3">出错了</string>
    <string name="total_comment">共<xliff:g>%d</xliff:g>条评论</string>
    <string name="all_comment">所有评论</string>
    <string name="hot_comment">热门评论</string>
    <string name="your_name">您的大名：</string>
    <string name="your_email">您的邮箱：</string>
    <string name="your_comment">您的评论：</string>
    <string name="security_code">验证码：</string>
    <string name="share_to">分享至:</string>
    <string name="share_to_weibo">评论分享至微博</string>
    <string name="submit">提交</string>
    <string name="optional">可选</string>
    <string name="sync_sina">新浪微博</string>
    <string name="sync_tencent">腾讯微博</string>
    <string name="no_text_info">无可分享内容！</string>
    <string name="no_sina_account_info">未绑定新浪微博，请先到设置中绑定！</string>
    <string name="no_tencent_account_info">未绑定腾讯微博，请先到设置中绑定！</string>
    <string name="sync_sina_start">正准备分享至新浪微博，请稍等&#8230;</string>
    <string name="sync_tencent_start">正准备分享至腾讯微博，请稍等&#8230;</string>
    <string name="share_news_text">#CB资讯阅读##分享新闻#《<xliff:g>%s</xliff:g>》<xliff:g>%s</xliff:g></string>
    <string name="share_comment_text">#CB资讯阅读##分享评论#《<xliff:g>%s</xliff:g>》<xliff:g>%s</xliff:g>「<xliff:g>%s</xliff:g>」：“<xliff:g>%s</xliff:g>”</string>
    <string name="sync_sina_success">成功分享至新浪微博！</string>
    <string name="sync_tencent_success">成功分享至腾讯微博！</string>
    <string name="sync_sina_fail">分享至新浪微博失败！</string>
    <string name="sync_tencent_fail">分享至腾讯微博失败！</string>
    <string name="comment_hint">请填写评论后再发表</string>
    <string name="email_hint">请输入格式正确的e-mail地址</string>
    <string name="validate_hint">请填写验证码后再发表</string>
    <string name="result_unknown">未知错误：<xliff:g>%s</xliff:g></string>
    <string name="result_0">您要评论的新闻不存在</string>
    <string name="result_1">验证码不正确</string>
    <string name="result_2">30秒内不允许再次评论</string>
    <string name="result_3">请填写评论后再提交</string>
    <string name="result_4">评论字数超过限制</string>
    <string name="result_5">发送评论成功</string>
    <string name="result_6">CBFW检测到您输入了不适当字词，请纠正</string>
    <string name="result_7">您的评论需审核后才能显示</string>
    <string name="result_8">由于种种原因，这条新闻不开放评论，请见谅</string>
    <string name="result_9">评论系统维护中</string>
    <string name="del">选择删除</string>
    <string name="confirm_dialog_title">请确认是否删除所选择项？</string>
    <string name="yes">好的</string>
    <string name="no">不</string>
    <string name="more">更多选项</string>
    <string name="setting">设置</string>
    <string name="display_setting">显示设置</string>
    <string name="font_size">正文字体大小</string>
    <string name="font_size_sample">新浪微博@ryancheng1944，腾讯微博@chengr1944，欢迎关注</string>
    <string name="display_logo">首页显示新闻主题LOGO</string>
    <string name="display_logo_info">同一新闻主题的LOGO会缓存到SD卡，不会重复从网络加载</string>
    <string name="auto_cache">Wi-Fi环境下自动缓存新闻</string>
    <string name="auto_cache_info">刷新新闻列表后立即下载新闻，仅Wi-Fi环境下有效，缓存的新闻可以在离线阅读中查看</string>
    <string name="auto_refresh">列表刷新方式</string>
    <string name="account_setting">个人设置</string>
    <string name="account_name">您的大名</string>
    <string name="account_email">您的邮箱</string>
    <string name="comment_tail">评论尾巴</string>
    <string name="default_comment_tail">来自CB资讯阅读 v1.6</string>
    <string name="account_sina">绑定新浪微博</string>
    <string name="account_tencent">绑定腾讯微博</string>
    <string name="sina_bind">已绑定新浪微博</string>
    <string name="tencent_bind">已绑定腾讯微博</string>
    <string name="expires_in">有效期至<xliff:g>%s</xliff:g></string>
    <string name="share_pic">转图片分享</string>
    <string name="share_pic_text">如文字太长，分享至微博时转成图片</string>
    <string name="remove_account_title">是否要移除该已绑定的账号？</string>
    <string name="account_hint">&lt;空&gt;</string>
    <string name="authorize_success">授权成功</string>
    <string name="authorize_fail">授权失败</string>
    <string name="other_setting">其它设置</string>
    <string name="clean_cache">清理缓存</string>
    <string name="clean_cache_info">清除数据库以及SD卡上缓存的新闻、评论和LOGO等</string>
    <string name="clean_cache_title">确认要清空数据库以及SD卡上缓存文件?</string>
    <string name="clean_step1">正在清理数据库&#8230;</string>
    <string name="clean_step2">正在清理LOGO缓存&#8230;</string>
    <string name="clean_step3">正在清理新闻&#8230;</string>
    <string name="clean_step4">正在清理评论&#8230;</string>
    <string name="clean_step5">正在清理截图文件&#8230;</string>
    <string name="clean_cache_success">缓存已清空！</string>
    <string name="clean_cache_fail">发生异常，缓存清除未完成！</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="author">作者：Ryan Cheng</string>
    <string name="share_app">分享本软件</string>
    <string name="share_app_text">我正在使用#CB资讯阅读#android客户端我会到处乱说？这客户端碉堡了，七分不能再少了。推荐给你，快去市场搜索下载吧!CB资讯阅读，谁用谁知道！</string>
    <string name="about_text">本软件为个人兴趣开发，为造福广大CB喷&#8230;网友，不含广告，欢迎下载使用！如果觉得不错，请点击下面的按钮，分享给更多人使用。</string>
    <string name="about_text2">如果在使用过程中发现任何bug，或者对美工，UI，功能等方面有想法，或者想帮忙改进本客户端，还请到“意见反馈”页进行反馈，未绑定微博账号的也可直接通过新浪微博（@ryancheng1944）、腾讯微博（@chengr1944）或发邮件到本人邮箱进行反馈：
        \n<a href="mailto:ryancheng1944@gmail.com">ryancheng1944@gmail.com</a>，我会第一时间处理</string>
    <string name="suggestion">意见反馈</string>
    <string name="suggestion_info">可以通过微博或者邮箱向我反馈，我会第一时间处理</string>
    <string name="suggestion_text">#CB资讯阅读意见反馈#</string>
    <string name="share_screenshot">同时分享截图</string>
    <string name="share_screenshot_error">无SD卡，无法分享截图</string>
    <string name="image_size">文件大小：<xliff:g>%d</xliff:g> KB</string>
    <string name="share">分享</string>
    <string name="cancel">取消</string>
</resources>