<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sub_title_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/new_comment_title"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="6dip"
            android:text="@string/new_comment"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/news_title_color"
            android:textStyle="bold" />

        <Button
            android:id="@+id/new_comment_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:padding="20dip"
            android:text="@string/submit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/news_title_color" />

        <ImageView
            android:id="@+id/new_comment_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/close"
            android:contentDescription="@string/new_comment" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/news_title_color" />

            <EditText
                android:id="@+id/new_comment_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/optional"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/news_title_color" />

            <EditText
                android:id="@+id/new_comment_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/optional"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_comment"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/news_title_color" />

            <EditText
                android:id="@+id/new_comment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment_hint"
                android:imeOptions="actionSend|flagNoEnterAction"
                android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
                android:maxLength="500"
                android:maxLines="8"
                android:minHeight="@dimen/input_text_height" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security_code"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/news_title_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/new_comment_security"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <ImageView
                    android:id="@+id/new_comment_security_img"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/new_comment_security"
                    android:layout_alignTop="@id/new_comment_security"
                    android:layout_marginLeft="6dip"
                    android:layout_toRightOf="@id/new_comment_security"
                    android:background="@color/white"
                    android:contentDescription="@string/security_code" />

                <Button
                    android:id="@+id/new_comment_refresh"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/new_comment_security"
                    android:layout_alignTop="@id/new_comment_security"
                    android:layout_marginLeft="6dip"
                    android:layout_toRightOf="@id/new_comment_security_img"
                    android:background="@drawable/btn_submit"
                    android:text="@string/refresh"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/news_title_color" />
            </RelativeLayout>

            <CheckBox
                android:id="@+id/new_comment_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/share_to_weibo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/news_title_color" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>