<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="20dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/news_title_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/news_title_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/news_title_color"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dip" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/news_text_color" />

            <Button
                android:id="@+id/btn_share_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_submit"
                android:layout_marginTop="10dip"
                android:padding="20dip"
                android:text="@string/share_app"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/news_title_color" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:background="@drawable/text_bg"
            android:padding="20dip"
            android:text="@string/about_text2"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/news_text_color" />
    </LinearLayout>

</ScrollView>