<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="6dip" >

            <TextView
                android:id="@+id/share_image_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <ImageView
                android:id="@+id/share_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginTop="20dip"
                android:background="@drawable/picture_frame"
                android:contentDescription="@string/share_screenshot"
                android:scaleType="fitStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="6dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_to"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/news_title_color" />

            <CheckBox
                android:id="@+id/share_tencent_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_tencent"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/news_title_color" />

            <CheckBox
                android:id="@+id/share_sina_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_sina"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/news_title_color" />

            <CheckBox
                android:id="@+id/share_image_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_screenshot"
                android:layout_marginTop="20dip"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/news_title_color" />

            <Button
                android:id="@+id/share_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/btn_submit"
                android:text="@string/share"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/news_title_color" />

            <Button
                android:id="@+id/share_cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_submit"
                android:text="@string/cancel"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/news_title_color" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>