<?xml version="1.0" encoding="utf-8"?>
<cheng.app.cnbeta.ui.CommentListItemView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_cmt"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/comment_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/news_title_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/comment_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="-20dip"
            android:layout_weight="1"
            android:padding="10dip"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/news_title_color" />

        <ImageView
            android:id="@+id/comment_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/share"
            android:src="@drawable/share" />
    </LinearLayout>

    <TextView
        android:id="@+id/comment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/news_text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/comment_reply"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reply"
            android:background="@drawable/btn_left"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/news_title_color" />

        <TextView
            android:id="@+id/comment_support"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:background="@drawable/btn_middle"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/news_title_color" />

        <TextView
            android:id="@+id/comment_against"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:background="@drawable/btn_middle"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/news_title_color" />

        <TextView
            android:id="@+id/comment_report"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/report"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:background="@drawable/btn_right"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/news_title_color" />
    </LinearLayout>

</cheng.app.cnbeta.ui.CommentListItemView>